--- a/subject.notes.html
+++ b/subject.notes.html
@@ -4,6 +4,19 @@
 <head>
 <meta charset="utf-8">
 <title>实验平台</title>
+<style>
+body
+{background-image:url('work.jpg');
+background-position:center center;
+background-repeat:no-repeat;
+background-attachment:fixed;
+background-size:cover;
+background-color:#98FB98}
+h1
+{text-align:center;font-size:3em}
+p
+{text-align:center}
+</style>
 </head>
 
 <body>
@@ -12,6 +25,8 @@
 <p>本实验是一个有关视觉的实验，由一个按键实验和一份问卷调查组成。</p>
 </body>
 
+<div align="center">
 <a href="subject.number&enter.html">同意</a>
+</div>
 
 </html>
