--- a/subject.e2.html
+++ b/subject.e2.html
@@ -4,16 +4,31 @@
 <head>
 <meta charset="utf-8">
 <title>实验平台2</title>
+<style>
+body
+{background-image:url('work.jpg');
+background-position:center center;
+background-repeat:no-repeat;
+background-attachment:fixed;
+background-size:cover;
+background-color:#98FB98}
+h1
+{text-align:center;}
+h2
+{text-align:center;}
+p
+{text-align:center}
+</style>
 </head>
 
 <body>
 <h1>欢迎来到本实验</h1>
-<h2>一、按键实验部分</h2>
+<h2>STEP1.按键实验部分</h2>
 <p>请点击下面的提示，进入按键实验，完成试验后，所在网页会出现“实验结束，感谢参与！”字样表明按键实验结束。结束后，关闭按键实验网页，回到本网页，进行下面的问卷实验。</p>
-<a href="http://www.runoob.com" target="_blank">点击进入按键实验</a>
-<h2>二、问卷调查部分</h2>
+<div align="center"><a href="http://www.runoob.com" target="_blank">点击进入按键实验</a></div>
+<h2>STEP2.问卷调查部分</h2>
 <p>请点击下面的提示，进入问卷调查，完成问卷调查后，所在网页会出现“问卷填写结束，感谢参与！”字样表明问卷调查结束。问卷调查结束后，整个实验就已经完成，无须再进行其他操作，请关闭问卷调查页面和本页面。</p>
-<a href="https://bnupsych.asia.qualtrics.com/jfe/form/SV_6tkwEKnP7XzxO3X">点击进入问卷填写</a>
+<div align="center"><a href="https://bnupsych.asia.qualtrics.com/jfe/form/SV_6tkwEKnP7XzxO3X">点击进入问卷填写</a></div>
 </body>
 
 </html>
